tests/fsharp/typecheck/sigs/neg_byref_5.bsl

neg_byref_5.fs(2,5,2,9): typecheck error FS0431: A byref typed value would be stored here. Top-level let-bound byref values are not permitted.

neg_byref_5.fs(2,5,2,9): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.

neg_byref_5.fs(2,12,2,16): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.
