tests/fsharp/typecheck/sigs/neg_byref_5.fs
module Test
let xop1 = None : byref<int> option                          (* trap: tinst of TExpr_op, union constructor *)
